# model-catalog-fastapi

./: .gitignore  .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  generate-server.sh  openapi.json  openapi.yaml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-amd64.yml  docker-arm64.yml  docker.yml  python-packages.yml
.openapi-generator/: FILES
contexts/: context.json
src/: create_openapi.py
tests/: test_catalog_identifier_api.py  test_causal_diagram_api.py  test_configuration_setup_api.py  test_constraint_api.py  test_coupled_model_api.py  test_data_transformation_api.py  test_data_transformation_setup_api.py  test_dataset_specification_api.py  test_default_api.py  test_empirical_model_api.py  test_emulator_api.py  test_equation_api.py  test_funding_information_api.py  test_geo_coordinates_api.py  test_geo_shape_api.py  test_grid_api.py  test_hybrid_model_api.py  test_image_api.py  test_intervention_api.py  test_model_api.py  test_model_category_api.py  test_model_configuration_api.py  test_model_configuration_setup_api.py  test_numerical_index_api.py  test_organization_api.py  test_parameter_api.py  test_person_api.py  test_point_based_grid_api.py  test_process_api.py  test_region_api.py  test_sample_collection_api.py  test_sample_execution_api.py  test_sample_resource_api.py  test_software_api.py  test_software_configuration_api.py  test_software_image_api.py  test_software_version_api.py  test_source_code_api.py  test_spatial_resolution_api.py  test_spatially_distributed_grid_api.py  (+7 more)
(+126 files in other folders)
